[metadata]
name = trackploy
version = attr: trackploy.version.__version__
author = European Centre for Medium-Range Weather Forecasts (ECMWF)
author_email = software.support@ecmwf.int
license = Apache 2.0
license_files = LICENSE
description = Suite deployment tools
long_description = file: README.md
long_description_content_type=text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    gitpython >= 3.1.25
    paramiko

[options.packages.find]
include = trackploy*

[options.entry_points]
console_scripts =
    trackploy-init = trackploy.init:main
    trackploy-deploy = trackploy.deploy:main
